              <afu@wta.att.ne.jp>.

              ybmtopbm: Assume YBM format has raster in natural order
              instead of byte-reversed.  This is what pbmtoybm creates,
              and is most logical.  We don't know if there are any existing
              YBM images or generators of them other than pbmtoybm.

              pbmpscale: speedup.

              pbmclean: speedup.
              
              pbmpscale: fix arithmetic overflow on output image dimensions.

              pbmtogem, pbmtoybm, pgmtolispm, ppmtoilbm, pnmtosgi: fix
              arithmetic overflow with image dimension represented as
              16 bit integer.

              pbmpage: fix garbage output.

              pnmhistmap: Fix crash with -width.  Always broken.

              libppmd/ppmpat: fix wild pointer in ppmd_fill_drawprocp();
              broken in 10.47.

              palmtopnm: fix incorrect "PALM_DIRECT_COLOR_FLAG is not valid
              for version 3 encoding type" failure.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pamtosvg: fix bug: occasional crash with out of range error.
              Introduced in 10.42.

              palmtopnm: fix incorrect output with version 3 direct color.
              Thanks Paul Bolle <pebolle@tiscali.nl>.

              Build: don't fail due to SIGPWR being undefined.

09.12.30 BJH  Release 10.49.00

              Add pnmmercator.

              pnmconvol: Add -matrix, -matrixfile.

              pambayer: add -nointerpolate.

              jpeg2ktopam: Work with JP2 input as well as JPC.

              pamscale: Work on multi image stream.

              ppmrainbow: Make new directory for temporary files.
              Prevents interference by other user who shares the main
              temporary file directory.

              libnetpbm: When reading plain format PNM with PAM routines,
              validate pixel against maxval (necessary for integer non-overrun
              guarantees).
